@@ -1,5 +1,6 @@
 0.7.9
 - Add on-the-fly computation of contour inertia ratios
+- Add menu options to save current event image
 - Bugfixes:
   - Isoelastics are not shown (#145)
 0.7.8
